# eccv-2024

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
benchmark/: benchmark.cpp
docker/: Dockerfile
src/include/eripose/: eripose.h
src/solvers/: solver_choi_kim_2018.cpp  solver_guan_cvpr_2020_cs.cpp  solver_guan_cvpr_2020_ls.cpp  solver_valtonen_ornhag_eccv_2024.cpp
